--- a/css/featuredposts.css
+++ b/css/featuredposts.css
@@ -1,23 +1,23 @@
 /* featuredposts.css */
 
 /**** Main Wrapper and Background ****/
-#featured-posts-wrapper * {
+.featured-posts-wrapper * {
 margin: 0; padding: 0; border: 0;
 }
 
-#featured-posts-wrapper.fps-single {
+.featured-posts-wrapper.fps-single {
 width: 550px;
 margin: 10px auto;
 }
 
-#featured-posts-background.fps-single {
+.featured-posts-background.fps-single {
 width: 500px;
 height: 245px;
 margin: 12px;
 }
 
 /**** Featured Posts List and Items ****/
-ul#featured-posts.fps-single {
+ul.featured-posts.fps-single {
 position: relative;
 z-index: 2;
 width: 480px;
@@ -29,7 +29,7 @@ float: left;
 overflow: hidden;
 }
 
-ul#featured-posts.fps-single li {
+ul.featured-posts.fps-single li {
 background: #333;
 width: 480px;
 height: 225px;
@@ -38,7 +38,7 @@ cursor: pointer;
 }
 
 /**** Featured Posts Text ****/
-ul#featured-posts.fps-single li .fps-text {
+ul.featured-posts.fps-single li .fps-text {
 width: 480px;
 height: 53px;
 margin-top: 172px;
@@ -65,7 +65,7 @@ font-size: 10pt;
 line-height: 10pt;
 }
 
-p#featured-posts-header {
+p.featured-posts-header {
 font-size: 18pt;
 font-weight: bold;
 text-shadow: 2px 2px 2px #000;
@@ -79,7 +79,7 @@ position: relative;
 
 
 /**** Left and Right Arrows ****/
-#scrollFeaturedPostsLeft, #scrollFeaturedPostsRight {
+.scrollFeaturedPostsLeft, .scrollFeaturedPostsRight {
 position: relative;
 z-index: 1;
 margin: 100px 0px 100px;
@@ -89,28 +89,28 @@ float: left;
 cursor: pointer;
 }
 
-#scrollFeaturedPostsLeft {
+.scrollFeaturedPostsLeft {
 background-position: 0pt 0pt;
 width: 22px;
 }
 
-#scrollFeaturedPostsRight {
+.scrollFeaturedPostsRight {
 background-position: -24px 0pt;
 width: 23px;
 }
 
-#scrollFeaturedPostsLeft:hover {
+.scrollFeaturedPostsLeft:hover {
 background-position: 0pt -38pt;
 }
 
-#scrollFeaturedPostsRight:hover {
+.scrollFeaturedPostsRight:hover {
 background-position: -24px -38pt;
 }
 
-#scrollFeaturedPostsLeft:active {
+.scrollFeaturedPostsLeft:active {
 background-position: 0pt 0pt;
 }
 
-#scrollFeaturedPostsRight:active {
+.scrollFeaturedPostsRight:active {
 background-position: -24px 0pt;
 }
