--- a/css/featuredposts.css
+++ b/css/featuredposts.css
@@ -22,7 +22,8 @@ position: relative;
 z-index: 2;
 width: 480px;
 height: 225px;
-margin-top: 10px;
+margin: 10px 0px 0px;
+padding: 0px;
 background: #fff;
 list-style: none;
 float: left;
