--- a/css/featuredposts.css
+++ b/css/featuredposts.css
@@ -6,20 +6,27 @@ margin: 0; padding: 0; border: 0;
 }
 
 .featured-posts-wrapper.fps-single {
+position: relative;
+z-index: 5;
+height: 245px;
 width: 550px;
 margin: 10px auto;
 }
 
 .featured-posts-background.fps-single {
+position: absolute;
+left: 0;
+z-index: 1;
 width: 500px;
 height: 245px;
-margin: 12px;
+margin: 0px 12px 12px;
+clear: none;
 }
 
 /**** Featured Posts List and Items ****/
 ul.featured-posts.fps-single {
 position: relative;
-z-index: 2;
+z-index: 3;
 width: 480px;
 height: 225px;
 margin: 10px 0px 0px;
@@ -72,7 +79,7 @@ p.featured-posts-header {
 font-size: 18pt;
 font-weight: bold;
 text-shadow: 2px 2px 2px #000;
-z-index: 3;
+z-index: 4;
 margin-left: 29px;
 margin-bottom: -24pt;
 margin-top: -9pt;
@@ -84,7 +91,7 @@ position: relative;
 /**** Left and Right Arrows ****/
 .scrollFeaturedPostsLeft, .scrollFeaturedPostsRight {
 position: relative;
-z-index: 1;
+z-index: 2;
 margin: 100px 0px 100px;
 height: 50px;
 overflow: hidden;
