--- a/css/featuredposts.css
+++ b/css/featuredposts.css
@@ -55,9 +55,8 @@ float: left;
 padding: 3px 5px;
 }
 
-a:link.featured-posts-image,
-a:visited.featured-posts-image,
-a:hover.featured-posts-image {
+ul.featured-posts.fps-single a {
+display: block;
 text-decoration: none;
 }
 
@@ -69,11 +68,13 @@ padding: 0px;
 p.fps-title {
 font-size: 12pt;
 font-weight: bold;
+text-decoration: none;
 }
 
 p.fps-excerpt {
 font-size: 10pt;
 line-height: 10pt;
+text-decoration: none;
 }
 
 p.featured-posts-header {
