git-svn-id: https://plugins.svn.wordpress.org/featured-posts-scroll/branches/varsize@407204 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/featuredposts.css
+++ b/css/featuredposts.css
@@ -39,7 +39,7 @@ overflow: hidden;
 }
 
 ul.featured-posts.fps-single li {
-background: #333;
+background: #000 no-repeat 50% 50%;
 height: 225px;
 width: 480px;
 overflow: hidden;
