--- a/css/featuredposts.css
+++ b/css/featuredposts.css
@@ -30,7 +30,7 @@ position: relative;
 z-index: 4;
 height: 225px;
 width: 480px;
-margin-top: 10px;
+margin: 10px 0px 0px 0px;
 padding: 0px;
 background: #fff;
 list-style: none;
