git-svn-id: https://plugins.svn.wordpress.org/featured-posts-scroll/branches/varsize@414610 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/featuredposts.css
+++ b/css/featuredposts.css
@@ -67,6 +67,7 @@ height: 100%;
 }
 
 ul.featured-posts.fps-single li .fps-image-div img.fps-image {
+display: block;
 position: relative;
 margin: auto;
 }
